--- a/01. PARTIE LEGISLATIVE/Article L1621-10 - 23085135.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-10 - 23085135.md
@@ -1,7 +1,8 @@
 # Article L1621-10
 
-Les enquêteurs techniques et les enquêteurs de première information peuvent immédiatement accéder au lieu de l'accident ou de
-l'incident, à l'engin de transport ou à son épave et à son contenu pour procéder sur place à toute constatation utile.
+Les enquêteurs techniques les enquêteurs de sécurité et les enquêteurs de première information peuvent immédiatement accéder
+au lieu de l'accident ou de l'incident, à l'engin de transport ou à son épave et à son contenu pour procéder sur place à
+toute constatation utile.
 
 L'autorité judiciaire est préalablement informée de l'intervention des enquêteurs.
 
@@ -10,16 +11,15 @@ Si nécessaire, les enquêteurs techniques ou, à défaut, les enquêteurs de pr
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 15 (VT), alinéas 1, phrase 1 et partie de la phrase 2 et 2
-	  - Code de l'aviation civile - art. L721-1 (VT)
-
 	**Cité par**:
 
 	  - Décret n°2004-85 du 26 janvier 2004 - art. 14-1 (Ab)
 	  - Code des transports - art. L1622-1 (V)
 	  - Code des transports - art. R1621-32 (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Codifié par**:
 
