--- a/01. PARTIE LEGISLATIVE/Article L1621-17 - 23085117.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-17 - 23085117.md
@@ -1,8 +1,9 @@
 # Article L1621-17
 
-I. ― Par dérogation aux dispositions de l'article L. 1621-16, le responsable de l'organisme permanent est habilité à
-transmettre des informations résultant de l'enquête technique, s'il estime qu'elles sont de nature à prévenir un événement de
-mer ou un accident ou un incident de transport terrestre ou d'aviation civile : 
+I. ― Par dérogation aux dispositions de l'article L. 1621-16, le responsable de l'organisme permanent ou de l'autorité
+responsable des enquêtes de sécurité est habilité à transmettre des informations résultant de l'enquête technique ou de
+l'enquête de sécurité, s'il estime qu'elles sont de nature à prévenir un événement de mer ou un accident ou un incident de
+transport terrestre ou d'aviation civile : 
 
 1° Aux autorités administratives chargées de la sécurité ; 
 
@@ -13,16 +14,16 @@ mer ou un accident ou un incident de transport terrestre ou d'aviation civile :
 
 4° Aux personnes physiques et morales chargées de la formation des personnels. 
 
-II. ― Le responsable de l'organisme permanent et, le cas échéant, les présidents des commissions d'enquête sont habilités,
-dans le cadre de leur mission, à rendre publiques des informations à caractère technique sur les constatations faites par les
-enquêteurs, le déroulement de l'enquête technique et, éventuellement, ses conclusions provisoires.
+II. ― Le responsable de l'organisme permanent ou de l'autorité responsable des enquêtes de sécurité et, le cas échéant, les
+présidents des commissions d'enquête sont habilités, dans le cadre de leur mission, à rendre publiques des informations à
+caractère technique sur les constatations faites par les enquêteurs, le déroulement de l'enquête technique ou de l'enquête de
+sécurité et, éventuellement, ses conclusions provisoires.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 22 (VT), alinéa 2, paragraphe II
-	  - Code de l'aviation civile - art. L731-1 (VT), alinéas 2 et 3, paragraphe II
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cité par**:
 
@@ -30,7 +31,7 @@ enquêteurs, le déroulement de l'enquête technique et, éventuellement, ses co
 
 	**Cite**:
 
-	  - Code des transports - art. L1621-16 (VD)
+	  - Code des transports - art. L1621-16
 
 	**Codifié par**:
 
