--- a/01. PARTIE LEGISLATIVE/Article L1621-2 - 23085154.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-2 - 23085154.md
@@ -3,15 +3,17 @@
 Sous réserve des dispositions de l'article L. 1621-1, tout accident ou incident de transport terrestre, tout événement de
 mer, peut faire l'objet d'une enquête technique. 
 
-Il en va de même pour tout accident ou incident d'aviation civile. Toutefois, tout accident ou incident grave d'aviation
-civile au sens des dispositions de l'article L. 6222-3 fait l'objet d'une enquête technique dans les conditions fixées aux
-articles L. 6222-1 et suivants.
+Tout accident ou incident grave d'aviation civile fait l'objet d'une enquête de sécurité dans les conditions prévues par les
+articles 11, 12 et 13 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre 2010 sur les enquêtes
+et la prévention des accidents et des incidents dans l'aviation civile et abrogeant la directive 94/56 CE, ainsi que dans
+celles déterminées le cas échéant par l'accord passé entre l'autorité responsable des enquêtes de sécurité et les autorités
+judiciaires conformément à l'article 12 dudit règlement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 14 (VT), alinéa 1, 1re partie, phrase 1, paragraphe I
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cité par**:
 
@@ -33,9 +35,7 @@ articles L. 6222-1 et suivants.
 
 	**Cite**:
 
-	  - Code des transports - art. L1621-1 (VD)
-	  - Code des transports - art. L6222-1 (VD)
-	  - Code des transports - art. L6222-3 (VD)
+	  - Code des transports - art. L1621-1
 
 	**Codifié par**:
 
