--- a/01. PARTIE LEGISLATIVE/Article L1621-20 - 23085110.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-20 - 23085110.md
@@ -1,14 +1,9 @@
 # Article L1621-20
 
-En cours d'enquête technique, l'organisme permanent peut émettre des recommandations de sécurité s'il estime que leur mise en
-œuvre immédiate est de nature à prévenir un accident ou un incident.
+Au cours de leurs enquêtes, l'organisme permanent ou l'autorité responsable des enquêtes de sécurité peuvent émettre des
+recommandations de sécurité s'ils estiment que leur mise en œuvre immédiate est de nature à prévenir un accident ou incident.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 23 (VT), alinéa 1
-	  - Code de l'aviation civile - art. L731-2 (VT)
 
 	**Cité par**:
 
@@ -17,3 +12,7 @@ En cours d'enquête technique, l'organisme permanent peut émettre des recommand
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
