--- a/01. PARTIE LEGISLATIVE/Article L1621-3 - 23085152.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-3 - 23085152.md
@@ -1,18 +1,17 @@
 # Article L1621-3
 
-L'enquête technique prévue à l'article L. 1621-2 a pour seul objet de prévenir de futurs événements de mer, accidents ou
-incidents de transport terrestre ou d'aviation civile. 
+L'enquête technique et l'enquête de sécurité prévues à l'article L. 1621-2 ont pour seul objet de prévenir de futurs
+événements de mer, accidents ou incidents de transport terrestre ou d'aviation civile. 
 
-Sans préjudice, le cas échéant, de l'enquête judiciaire qui peut être ouverte, elle consiste à collecter et analyser les
+Sans préjudice, le cas échéant, de l'enquête judiciaire qui peut être ouverte, elles consistent à collecter et analyser les
 informations utiles, à déterminer les circonstances et les causes certaines ou possibles de l'événement, de l'accident ou de
 l'incident et, s'il y a lieu, à établir des recommandations de sécurité.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 14 (VT), alinéa 1 (phrases 1, 2e partie, et 2), paragraphe I
-	  - Code de l'aviation civile - art. L711-1 (VT), alinéa 3, phrase2, paragraphe III, alinéa 1, paragraphe I
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cité par**:
 
@@ -25,7 +24,7 @@ l'incident et, s'il y a lieu, à établir des recommandations de sécurité.
 
 	**Cite**:
 
-	  - Code des transports - art. L1621-2 (VD)
+	  - Code des transports - art. L1621-2 (V)
 
 	**Codifié par**:
 
