--- a/01. PARTIE LEGISLATIVE/Article L1621-4 - 23085150.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-4 - 23085150.md
@@ -1,19 +1,19 @@
 # Article L1621-4
 
-Un rapport d'enquête technique est établi par l'organisme permanent mentionné à l'article L. 1621-6 qui le rend public, au
-terme de l'enquête technique, sous une forme appropriée. Ce rapport n'indique pas le nom des personnes. Il ne fait état que
-des informations résultant de l'enquête nécessaires à la détermination des circonstances et des causes de l'accident ou de
-l'incident et à la compréhension des recommandations de sécurité. 
+Un rapport d'enquête technique ou d'enquête de sécurité est établi par l'organisme permanent ou par l'autorité responsable
+des enquêtes de sécurité mentionnés à l'article L. 1621-6 qui le rendent public, au terme de l'enquête, sous une forme
+appropriée. Ce rapport n'indique pas les noms des personnes. Il ne fait état que des informations résultant de l'enquête
+nécessaires à la détermination des circonstances et des causes de l'accident ou de l'incident et à la compréhension des
+recommandations de sécurité. 
 
-Avant que le rapport ne soit rendu public, les enquêteurs techniques peuvent recueillir les observations des autorités,
-entreprises et personnels intéressés qui sont tenus au secret professionnel concernant les éléments de cette consultation.
+Avant que le rapport ne soit rendu public, les enquêteurs peuvent recueillir les observations des autorités, entreprises et
+personnels intéressés qui sont tenus au secret professionnel concernant les éléments de cette consultation.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 23 (VT), alinéas 2 et 3
-	  - Code de l'aviation civile - art. L731-3 (VT)
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cité par**:
 
@@ -22,7 +22,7 @@ entreprises et personnels intéressés qui sont tenus au secret professionnel co
 
 	**Cite**:
 
-	  - Code des transports - art. L1621-6 (VD)
+	  - Code des transports - art. L1621-6 (V)
 
 	**Codifié par**:
 
