--- a/01. PARTIE LEGISLATIVE/Article L1621-6 - 23085144.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-6 - 23085144.md
@@ -1,25 +1,24 @@
 # Article L1621-6
 
-L'enquête technique mentionnée à l'article L. 1621-2 est effectuée par un organisme permanent spécialisé ou sous son contrôle
-dans les conditions suivantes : 
+L'enquête technique et l'enquête de sécurité mentionnées à l'article L. 1621-2 sont effectuées respectivement par un
+organisme permanent spécialisé et par l'autorité responsable des enquêtes de sécurité ou sous leur contrôle, dans les
+conditions suivantes : 
 
 1° Pour les événements de mer et les accidents ou incidents de transport terrestre, ont la qualité d'enquêteurs techniques
 les membres de l'organisme permanent, les membres des corps d'inspection et de contrôle auxquels l'organisme peut faire appel
 et, le cas échéant, les membres d'une commission d'enquête constituée à la demande de l'organisme auprès du ministre chargé
 des transports ; 
 
-2° Pour les accidents ou incidents d'aviation civile, ont seuls la qualité d'enquêteurs techniques les membres de l'organisme
-permanent. Toutefois des enquêteurs de première information appartenant aux corps techniques de l'aviation civile peuvent
-être agréés pour effectuer, sous le contrôle et l'autorité de l'organisme permanent, les opérations d'enquête prévues au
-présent titre. La commission d'enquête instituée, le cas échéant, par le ministre chargé des transports pour un accident
-d'aviation civile déterminé, assiste l'organisme permanent.
+2° Pour les accidents ou incidents d'aviation civile, ont seuls la qualité d'enquêteurs de sécurité les membres de l'autorité
+responsable des enquêtes de sécurité. Toutefois des enquêteurs de première information peuvent être agréés pour effectuer,
+sous le contrôle et l'autorité de l'autorité responsable des enquêtes de sécurité, les opérations d'enquête prévues au
+présent titre.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 14 (VT), alinéa 5, paragraphe III
-	  - Code de l'aviation civile - art. L711-2 (VT), alinéa 1, art. L711-3 (VT), alinéas 1 et 2
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cité par**:
 
@@ -32,7 +31,7 @@ d'aviation civile déterminé, assiste l'organisme permanent.
 
 	**Cite**:
 
-	  - Code des transports - art. L1621-2 (VD)
+	  - Code des transports - art. L1621-2 (V)
 
 	**Codifié par**:
 
