--- a/01. PARTIE LEGISLATIVE/Article L1621-7 - 23085142.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-7 - 23085142.md
@@ -1,16 +1,15 @@
 # Article L1621-7
 
-Dans le cadre de l'enquête technique, l'organisme et les personnes chargées de l'enquête agissent en toute indépendance et ne
-reçoivent ni ne sollicitent d'instructions d'aucune autorité ni d'aucun organisme dont les intérêts pourraient entrer en
-conflit avec la mission qui leur est confiée.
+Dans le cadre de l'enquête technique ou de l'enquête de sécurité, l'organisme et les personnes chargées de l'enquête agissent
+en toute indépendance et ne reçoivent ni ne sollicitent d'instructions d'aucune autorité ni d'aucun organisme dont les
+intérêts pourraient entrer en conflit avec la mission qui leur est confiée.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 14 (VT), alinéa 7, paragraphe III
-	  - Code de l'aviation civile - art. L711-2 (VT), alinéa 2
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
