--- a/01. PARTIE LEGISLATIVE/Article L1622-1 - 23085106.md
+++ b/01. PARTIE LEGISLATIVE/Article L1622-1 - 23085106.md
@@ -1,7 +1,7 @@
 # Article L1622-1
 
-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait d'entraver l'action des enquêteurs techniques mentionnés
-aux articles L. 1621-6 et L. 1621-10 : 
+Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait d'entraver l'action des enquêteurs techniques et des
+enquêteurs de sécurité mentionnés aux articles L. 1621-6 et L. 1621-10 : 
 
 1° Soit en s'opposant à l'exercice des fonctions dont ils sont chargés ; 
 
@@ -10,15 +10,14 @@ dissimulant, en les altérant ou en les faisant disparaître.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 24 (VT), alinéas 1 à 3, paragraphe I
-	  - Code de l'aviation civile - art. L741-2 (VT)
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L1621-10 (VD)
-	  - Code des transports - art. L1621-6 (VD)
+	  - Code des transports - art. L1621-10
+	  - Code des transports - art. L1621-6
 
 	**Cité par**:
 
