--- a/01. PARTIE LEGISLATIVE/Article L1882-1 - 23084794.md
+++ b/01. PARTIE LEGISLATIVE/Article L1882-1 - 23084794.md
@@ -1,14 +1,21 @@
 # Article L1882-1
 
-Les chapitres Ier et II du titre II du livre VI ainsi que les articles L. 1632-2 et L. 1632-3 sont applicables à Wallis-et-
-Futuna.
+Les chapitres Ier et II du titre II du livre VI dans leur rédaction issue de l'ordonnance n° 2012-872 du 12 juillet 2012
+portant application de divers règlements du Parlement européen et du Conseil en matière d'aviation civile ainsi que les
+articles L. 1632-2 et L. 1632-3 sont applicables à Wallis-et-Futuna.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code des transports - art. L1632-2 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012
+	  - Code des transports - art. L1632-2 (V)
+	  - Code des transports - art. L1632-3 (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
