--- a/01. PARTIE LEGISLATIVE/Article L1621-11 - 23085132.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-11 - 23085132.md
@@ -1,8 +1,9 @@
 # Article L1621-11
 
-Les enquêteurs techniques ont accès sans retard au contenu des enregistreurs de bord et des dispositifs techniques
-enregistrant des données, notamment les paramètres utiles à la compréhension des causes et circonstances de l'accident ou de
-l'incident, et peuvent procéder à leur exploitation dans les conditions suivantes : 
+I.-Pour les accidents ou incidents de transport terrestre et les événements de mer les enquêteurs techniques ont accès sans
+retard au contenu des enregistreurs de bord et des dispositifs techniques enregistrant des données, notamment les paramètres
+utiles à la compréhension des causes et circonstances de l'accident ou de l'incident, et peuvent procéder à leur exploitation
+dans les conditions suivantes : 
 
 1° Lorsqu'il y a ouverture d'une enquête ou d'une information judiciaire, les enregistreurs et les supports d'enregistrement,
 préalablement saisis par l'autorité judiciaire selon les modalités prévues par les articles 97 et 163 du code de procédure
@@ -13,19 +14,23 @@ officier de police judiciaire, des éléments qu'ils renferment ;
 d'enregistrement peuvent être prélevés par les enquêteurs techniques, ou, sur instruction de l'organisme permanent, par les
 enquêteurs de première information, en présence d'un officier de police judiciaire. 
 
-Le concours de l'officier de police judiciaire est sollicité par l'intermédiaire du procureur de la République.
+Le concours de l'officier de police judiciaire est sollicité par l'intermédiaire du procureur de la République. 
+
+II.-Pour les accidents ou incidents d'aviation civile, le recueil, la conservation et l'exploitation des éléments de preuve
+sont assurés par l'autorité responsable des enquêtes de sécurité dans les conditions prévues par le second alinéa de
+l'article L. 1621-2.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 16 (VT)
-	  - Code de l'aviation civile - art. L721-2 (VT)
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cite**:
 
-	  - Code de procédure pénale - art. 163 (V)
-	  - Code de procédure pénale - art. 97 (V)
+	  - Code de procédure pénale - art. 163
+	  - Code de procédure pénale - art. 97
+	  - Code des transports - art. L1621-2 (V)
 
 	**Codifié par**:
 
