--- a/01. PARTIE LEGISLATIVE/Article L1621-12 - 23085130.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-12 - 23085130.md
@@ -1,24 +1,36 @@
 # Article L1621-12
 
-Lorsqu'il n'y a pas ouverture d'une enquête ou d'une information judiciaire, les enquêteurs techniques ou, sur instruction de
-l'organisme permanent, les enquêteurs de première information peuvent, en présence d'un officier de police judiciaire,
-prélever, aux fins d'examen ou d'analyse, les débris, fluides, pièces, organes, ensembles ou mécanismes qu'ils estiment
-propres à contribuer à la détermination des circonstances et des causes de l'accident ou de l'incident.
+I.-Pour les accidents ou incidents de transport terrestre et les événements de mer lorsqu'il n'y a pas ouverture d'une
+enquête ou d'une information judiciaire, les enquêteurs techniques ou, sur instruction de l'organisme permanent, les
+enquêteurs de première information peuvent, en présence d'un officier de police judiciaire, prélever, aux fins d'examen ou
+d'analyse, les débris, fluides, pièces, organes, ensembles ou mécanismes qu'ils estiment propres à contribuer à la
+détermination des circonstances et des causes de l'accident ou de l'incident. 
 
-Le concours de l'officier de police judiciaire est sollicité par l'intermédiaire du procureur de la République.
+Le concours de l'officier de police judiciaire est sollicité par l'intermédiaire du procureur de la République. 
 
-Les objets ou les documents retenus par les enquêteurs techniques sont restitués dès lors que leur conservation n'apparaît
-plus nécessaire à la détermination des circonstances et des causes de l'accident ou de l'incident.
+II.-Pour les accidents ou incidents de transport terrestre ou d'aviation civile et les événements de mer les objets ou les
+documents retenus par les enquêteurs techniques ou par les enquêteurs de sécurité sont restitués dès lors que leur
+conservation n'apparaît plus nécessaire à la détermination des circonstances et des causes de l'accident ou de l'incident. 
+
+Si une enquête judiciaire est menée, le procureur de la République ou le juge d'instruction saisi de l'éventualité de cette
+restitution est préalablement avisé. 
 
 La rétention et, le cas échéant, l'altération ou la destruction, pour les besoins de l'enquête, des objets ou des documents
-soumis à examen ou à l'analyse n'entraînent aucun droit à indemnité.
+soumis à examen ou à l'analyse n'entraînent aucun droit à indemnité. 
+
+III.-Pour les accidents ou incidents d'aviation civile, le recueil, la conservation et l'exploitation des éléments de preuve
+sont assurés par l'autorité responsable des enquêtes de sécurité dans les conditions prévues par le second alinéa de
+l'article L. 1621-2.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 17 (VT)
-	  - Code de l'aviation civile - art. L721-4 (VT)
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
+
+	**Cite**:
+
+	  - Code des transports - art. L1621-2 (V)
 
 	**Codifié par**:
 
