--- a/01. PARTIE LEGISLATIVE/Article L1621-13 - 23085128.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-13 - 23085128.md
@@ -1,24 +1,31 @@
 # Article L1621-13
 
-Lorsqu'une enquête ou une information judiciaire a été ouverte, les enquêteurs techniques peuvent procéder, avec l'accord du
-procureur de la République ou du juge d'instruction, au prélèvement, aux fins d'examen ou d'analyse, de débris, fluides,
-pièces, organes, ensembles ou mécanismes qu'ils estiment propres à contribuer à la détermination des circonstances et des
-causes de l'accident ou de l'incident.
+I.-Pour les accidents ou incidents de transport terrestre et les événements de mer lorsqu'une enquête ou une information
+judiciaire a été ouverte, les enquêteurs techniques peuvent procéder, avec l'accord du procureur de la République ou du juge
+d'instruction, au prélèvement, aux fins d'examen ou d'analyse, de débris, fluides, pièces, organes, ensembles ou mécanismes
+qu'ils estiment propres à contribuer à la détermination des circonstances et des causes de l'accident ou de l'incident. 
 
 Les enquêteurs techniques ne peuvent soumettre les débris, fluides, pièces, organes, ensembles et mécanismes qui ont fait
 l'objet d'une saisie, à des examens ou analyses susceptibles de les modifier, altérer ou détruire, qu'avec l'accord de
-l'autorité judiciaire.
+l'autorité judiciaire. 
 
 A défaut d'accord, ils sont informés des opérations d'expertise diligentées par l'autorité judiciaire compétente. Ils ont
 droit d'y assister et d'exploiter les constatations faites dans le cadre de ces opérations pour les besoins de l'enquête
-technique.
+technique. 
+
+II.-Pour les accidents ou incidents d'aviation civile, le recueil, la conservation et l'exploitation des éléments de preuve
+sont assurés par l'autorité responsable des enquêtes de sécurité dans les conditions prévues par le second alinéa de
+l'article L. 1621-2.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 18 (VT)
-	  - Code de l'aviation civile - art. L721-3 (VT)
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
+
+	**Cite**:
+
+	  - Code des transports - art. L1621-2 (V)
 
 	**Codifié par**:
 
