--- a/01. PARTIE LEGISLATIVE/Article L1621-16 - 23085119.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-16 - 23085119.md
@@ -1,19 +1,19 @@
 # Article L1621-16
 
-Les personnels de l'organisme permanent, les personnes chargées de l'enquête, y compris les enquêteurs de première
-information et les membres des commissions d'enquête ainsi que les experts auxquels il est éventuellement fait appel sont
-tenus au secret professionnel dans les conditions et sous les peines prévues par l'article 226-13 du code pénal.
+Les personnels de l'organisme permanent ou de l'autorité responsable des enquêtes de sécurité, les personnes chargées de
+l'enquête, y compris les enquêteurs de première information et les membres des commissions d'enquête ainsi que les experts
+auxquels il est éventuellement fait appel sont tenus au secret professionnel dans les conditions et sous les peines prévues
+par l'article 226-13 du code pénal.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 22 (VT), alinéa 1, paragraphe I
-	  - Code de l'aviation civile - art. L731-1 (VT), alinéa 1, paragraphe I
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
 	**Cite**:
 
-	  - Code pénal - art. 226-13 (V)
+	  - Code pénal - art. 226-13
 
 	**Cité par**:
 
