--- a/01. PARTIE LEGISLATIVE/Article L1621-19 - 23085112.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-19 - 23085112.md
@@ -1,14 +1,14 @@
 # Article L1621-19
 
 Les informations ou documents relevant du secret de l'enquête ou de l'instruction judiciaires peuvent être communiqués aux
-enquêteurs techniques avec l'accord du procureur de la République.
+enquêteurs techniques et aux enquêteurs de sécurité avec l'accord du procureur de la République.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 19 (VT), alinéa 3, phrase 1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
