--- a/01. PARTIE LEGISLATIVE/Article L1831-3 - 26175798.md
+++ b/01. PARTIE LEGISLATIVE/Article L1831-3 - 26175798.md
@@ -1,25 +1,18 @@
-# Article L1871-2
+# Article L1831-3
 
-Les dispositions du chapitre Ier du titre II du livre VI ne sont pas applicables en Polynésie française en ce qu'elles
-concernent les incidents ou les accidents de transport terrestre. 
-
-Pour l'application du second alinéa de l'article L. 1621-2 en Polynésie française, les mots : " dans les conditions prévues
-par les articles 11, 12 et 13 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre 2010 sur les
+Pour l'application du second alinéa de l'article L. 1621-2 à Saint-Barthélemy, les mots : " dans les conditions prévues par
+les articles 11,12 et 13 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre 2010 sur les
 enquêtes et la prévention des accidents et des incidents dans l'aviation civile et abrogeant la directive 94/56 CE, ainsi que
 dans celles déterminées le cas échéant par l'accord passé entre cette autorité et les autorités judiciaires conformément à
 l'article 12 dudit règlement. " sont remplacés par les mots : " dans les conditions prévues par les règles applicables en
-métropole en vertu des articles 11, 12 et 13 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre
+métropole en vertu des articles 11,12 et 13 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre
 2010 sur les enquêtes et la prévention des accidents et des incidents dans l'aviation civile et abrogeant la directive 94/56
 CE, ainsi que dans celles déterminées le cas échéant par l'accord passé entre cette autorité et les autorités judiciaires
 conformément à l'article 12 dudit règlement. "
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
+	**Créé par**:
 
 	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
 
