--- a/01. PARTIE LEGISLATIVE/Article L1892-1 - 23084771.md
+++ b/01. PARTIE LEGISLATIVE/Article L1892-1 - 23084771.md
@@ -1,9 +1,19 @@
 # Article L1892-1
 
-Les chapitres Ier et II du titre II du livre VI sont applicables dans les Terres australes et antarctiques françaises.
+Les chapitres Ier et II du titre II du livre VI dans leur rédaction issue de l'ordonnance n° 2012-872 du 12 juillet 2012
+portant application de divers règlements du Parlement européen et du Conseil en matière d'aviation civile sont applicables
+dans les Terres australes et antarctiques françaises.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 1
