--- a/01. PARTIE LEGISLATIVE/Article L6232-10 - 23078216.md
+++ b/01. PARTIE LEGISLATIVE/Article L6232-10 - 23078216.md
@@ -1,19 +1,19 @@
 # Article L6232-10
 
 Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait, pour les personnes qui, de par leurs fonctions, sont
-appelées à connaître d'un accident ou d'un incident mentionné à l'article L. 6222-1, de ne pas en rendre compte dans les
-conditions fixées à l'article L. 6222-8.
+appelées à connaître d'un accident ou d'un incident grave définis à l'article 2 du règlement (UE) n° 996/2010 du Parlement
+européen et du Conseil du 20 octobre 2010 sur les enquêtes et la prévention des accidents et des incidents dans l'aviation
+civile et survenus à un aéronef visé à l'article L. 6222-1, de ne pas en rendre compte.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L741-1 (Ab), incident/accident
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
 
 	**Cite**:
 
 	  - Code des transports - art. L6222-1 (V)
-	  - Code des transports - art. L6222-8 (V)
 
 	**Cité par**:
 
