--- a/01. PARTIE LEGISLATIVE/Article L6782-3 - 26176695.md
+++ b/01. PARTIE LEGISLATIVE/Article L6782-3 - 26176695.md
@@ -1,6 +1,6 @@
-# Article L6731-1
+# Article L6782-3
 
-Pour l'application de l'article L. 6222-1 à Saint-Barthélemy, les mots : " qui n'est pas visé à l'annexe II du règlement (CE)
+Pour l'application de l'article L. 6222-1 à Wallis-et-Futuna, les mots : " qui n'est pas visé à l'annexe II du règlement (CE)
 n° 216/2008 du Parlement européen et du Conseil du 20 février 2008 concernant des règles communes dans le domaine de
 l'aviation civile et instituant une Agence européenne de la sécurité aérienne " sont remplacés par les mots : " qui n'est pas
 visé par les règles applicables en métropole en vertu de l'annexe II du règlement (CE) n° 216/2008 du Parlement européen et
@@ -9,22 +9,10 @@ européenne de la sécurité aérienne ".
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
+	**Créé par**:
 
 	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
-
-	**Liens**:
-
-	  - TRANSFERE: Loi n°2013-619 du 16 juillet 2013 - art. 20
 
 	**Cite**:
 
 	  - Code des transports - art. L6222-1
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L6732-1 (V)
