--- a/01. PARTIE LEGISLATIVE/Article L6782-4 - 26176703.md
+++ b/01. PARTIE LEGISLATIVE/Article L6782-4 - 26176703.md
@@ -1,25 +1,17 @@
-# Article L6731-2
+# Article L6782-4
 
-Pour l'application de l'article L. 6232-10 à Saint-Barthélemy, les mots : " définis à l'article 2 du règlement (UE) n°
+Pour l'application de l'article L. 6232-10 à Wallis-et-Futuna, les mots : " définis à l'article 2 du règlement (UE) n°
 996/2010 du Parlement européen et du Conseil du 20 octobre 2010 sur les enquêtes et la prévention des accidents et des
-incidents dans l'aviation civile. " sont remplacés par les mots : " définis par les règles applicables en métropole en vertu
+incidents dans l'aviation civile " sont remplacés par les mots : " définis par les règles applicables en métropole en vertu
 de l'article 2 du règlement (UE) n° 996/2010 du Parlement européen et du Conseil du 20 octobre 2010 sur les enquêtes et la
 prévention des accidents et des incidents dans l'aviation civile ".
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
+	**Créé par**:
 
 	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
-
-	**Liens**:
-
-	  - TRANSFERE: Loi n°2013-619 du 16 juillet 2013 - art. 20
 
 	**Cite**:
 
 	  - Code des transports - art. L6232-10
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L6732-2 (V)
