--- a/01. PARTIE LEGISLATIVE/Article L6792-1 - 23077222.md
+++ b/01. PARTIE LEGISLATIVE/Article L6792-1 - 23077222.md
@@ -1,9 +1,21 @@
 # Article L6792-1
 
-Les dispositions du livre II de la présente partie sont applicables aux Terres australes et antarctiques françaises.
+Les dispositions du livre II de la présente partie sont applicables aux Terres australes et antarctiques françaises. 
+
+Le chapitre II du titre II du livre II est applicable aux Terres australes et antarctiques françaises dans sa version issue
+de l'ordonnance n° 2012-872 du 12 juillet 2012 portant application de divers règlements du Parlement européen et du Conseil
+en matière d'aviation civile.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
