--- a/01. PARTIE LEGISLATIVE/Article L5243-4 - 23080912.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-4 - 23080912.md
@@ -3,13 +3,24 @@
 Les fonctionnaires et agents de l'Etat mentionnés aux articles précédents peuvent accéder à bord des navires pour exercer les
 compétences qui leur sont reconnues par ces dispositions.
 
-Ils peuvent visiter le navire et demander la communication des titres, certificats et autres documents professionnels et
-recueillir les renseignements et justifications utiles à leur mission.
+Ils peuvent visiter le navire et recueillir  tous renseignements et justifications nécessaires ou exiger la  communication de
+tous documents, titres, certificats ou pièces utiles,  quel qu'en soit le support, et en prendre copie. 
 
 Toutefois, ils ne peuvent accéder aux parties du navire qui sont à usage exclusif d'habitation sauf en cas de contrôle
-portant sur les conditions de sécurité, d'habitabilité, d'hygiène, de santé et de sécurité au travail.
+portant sur les conditions de sécurité, d'habitabilité, d'hygiène, de santé et de sécurité au travail. Les  parties à usage
+d'habitation ne peuvent être visitées qu'entre six  heures et vingt et une heures, avec l'assentiment de l'occupant ou, à
+défaut, en présence d'un officier de police agissant conformément aux  dispositions du code de procédure pénale relatives
+aux perquisitions, visites domiciliaires et saisies des pièces à  conviction. Cet assentiment doit faire l'objet d'une
+déclaration écrite  de la main de l'intéressé ou si celui-ci ne sait écrire, il en est fait  mention au procès-verbal, ainsi
+que de son assentiment.
+
+Les officiers et agents mentionnés au premier alinéa du présent article peuvent procéder à la pose de scellés.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 6
 
 	**Cité par**:
 
@@ -18,7 +29,3 @@ portant sur les conditions de sécurité, d'habitabilité, d'hygiène, de santé
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 6
