--- a/01. PARTIE LEGISLATIVE/Article L5263-6 - 26569974.md
+++ b/01. PARTIE LEGISLATIVE/Article L5263-6 - 26569974.md
@@ -1,19 +1,15 @@
-# Article L5262-4
+# Article L5263-6
 
 Outre les officiers et agents de police judiciaire, sont habilités à constater les infractions aux dispositions du présent
 chapitre ou aux dispositions réglementaires prises pour leur application les fonctionnaires et agents mentionnés aux 1° à 10°
-de l'article L. 5222-1, ainsi que les capitaines mentionnés au 11° du même article.
+de l'article L. 5222-1.
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
+	**Créé par**:
 
 	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 6
 
 	**Cite**:
 
 	  - Code des transports - art. L5222-1
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
