--- a/01. PARTIE LEGISLATIVE/Article L5336-6 - 23080497.md
+++ b/01. PARTIE LEGISLATIVE/Article L5336-6 - 23080497.md
@@ -6,18 +6,18 @@ République.
 
 Cet envoi a lieu dans les dix jours au plus tard, y compris celui où le fait, objet du procès-verbal, a été constaté.
 
-Copie en est adressée simultanément à l'autorité hiérarchique dont relève l'agent verbalisateur et à l'autorité portuaire.
-Ces autorités font connaître leurs observations au procureur de la République.
+Copie en est adressée simultanément à l'autorité hiérarchique dont relève l'agent verbalisateur, au directeur interrégional
+de la mer et à l'autorité portuaire. Ces autorités font connaître leurs observations au procureur de la République.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 7
 
 	**Cite**:
 
 	  - Code de procédure pénale - art. 529
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. L345-5 (Ab)
 
 	**Cité par**:
 
