--- a/01. PARTIE LEGISLATIVE/Article L5111-2 - 23081881.md
+++ b/01. PARTIE LEGISLATIVE/Article L5111-2 - 23081881.md
@@ -3,6 +3,15 @@
 Est puni de 3 750 € d'amende le capitaine qui ne se conforme pas aux dispositions réglementaires prévues à l'article
 précédent sur les marques extérieures d'identification des navires, ou qui efface, altère, couvre ou masque ces marques.
 
+Ces  dispositions sont également applicables aux personnes embarquées sur un  navire ou engin muni d'un permis de circulation
+ou d'une carte de  circulation. Est alors considérée comme capitaine la personne qui, en  fait, dirige le navire ou engin. 
+
+Lorsqu'il  prononce des amendes en application du présent article à l'encontre du  capitaine, du chef de quart ou de toute
+personne exerçant la conduite du  navire, le tribunal peut, compte tenu des circonstances de fait et  notamment des
+conditions d'exercice de ses fonctions, mettre, en  totalité ou en partie, à la charge du propriétaire ou de l'exploitant du
+navire le paiement des amendes ainsi prononcées. Il ne peut user de  cette faculté que si le propriétaire ou l'exploitant du
+navire a été  cité à l'audience.
+
 **Liens relatifs à cet article**
 
 	**Cité par**:
@@ -18,9 +27,9 @@ précédent sur les marques extérieures d'identification des navires, ou qui ef
 	  - Loi du 17 décembre 1926 - art. 37 (V)
 	  - Code des transports - art. L5111-3 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code disciplinaire et pénal de la marine marcha... - art. 78 (V)
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 9
 
 	**Codifié par**:
 
