--- a/01. PARTIE LEGISLATIVE/Article L5243-1 - 23080918.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-1 - 23080918.md
@@ -12,8 +12,7 @@ les dispositions du présent titre ou les dispositions réglementaires prises po
 4° Les techniciens experts du service de la sécurité de la navigation maritime. 
 
 Les infractions réprimées par les articles L. 5242-1 à L. 5242-8 ou par les dispositions réglementaires prises pour leur
-application peuvent en outre être recherchées et constatées par les agents mentionnés à l'article L. 5222-1, dans les
-conditions prévues par l'article L. 5222-2.
+application peuvent en outre être recherchées et constatées par les agents mentionnés à l'article L. 5222-1.
 
 **Liens relatifs à cet article**
 
@@ -26,12 +25,11 @@ conditions prévues par l'article L. 5222-2.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 6
 
 	**Cite**:
 
 	  - Code des transports - art. L5222-1
-	  - Code des transports - art. L5222-2
 	  - Code des transports - art. L5242-1
 
 	**Codifié par**:
