--- a/01. PARTIE LEGISLATIVE/Article L5243-2-2 - 24149841.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-2-2 - 24149841.md
@@ -2,18 +2,16 @@
 
 Les commandants des bâtiments de l'Etat, les contrôleurs des affaires maritimes, les syndics des gens de mer et les agents
 mentionnés au 3° de l'article L. 5336-5 sont habilités à rechercher et à constater les infractions prévues par les articles
-L. 5242-21 à L. 5242-23 ou par les dispositions réglementaires prises pour leur application, dans les conditions prévues à
-l'article L. 5222-2.
+L. 5242-21 à L. 5242-23 ou par les dispositions réglementaires prises pour leur application .
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 6
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 6
 
 	**Cite**:
 
-	  - Code des transports - art. L5222-2
 	  - Code des transports - art. L5242-21
 	  - Code des transports - art. L5336-5
 
