--- a/01. PARTIE LEGISLATIVE/Article L5262-7 - 23080835.md
+++ b/01. PARTIE LEGISLATIVE/Article L5262-7 - 23080835.md
@@ -1,23 +1,27 @@
 # Article L5262-7
 
-Les dispositions de l'article L. 5262-1 et          de l'article L. 5262-2 sont applicables : 
+Les dispositions des articles L. 5262-1, L. 5262-2, L. 5262-5, L. 5262-6 et L. 5262-6-2 sont applicables : 
 
 1° Aux personnes, même étrangères, qui se trouvent sur un navire étranger, lorsque l'infraction a lieu dans les eaux
 intérieures maritimes ou les eaux territoriales ; 
 
 2° Aux personnes qui se trouvent sur un navire ou autre engin muni d'un permis de circulation ou d'une carte de circulation.
-Est alors considérée comme capitaine la personne qui, en fait, dirige le navire ou autre engin flottant.
+Est alors considérée comme capitaine la personne qui, en fait, dirige le navire ou autre engin flottant ; 
+
+3° Aux personnes embarquées sur un bateau muni d'un titre de navigation intérieure lorsqu'il pratique la navigation maritime
+en aval de la limite transversale de la mer.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 10
 
 	**Cite**:
 
-	  - Code des transports - art. L5262-1
-	  - Code des transports - art. L5262-2
+	  - Code des transports - art. L5262-1 (V)
+	  - Code des transports - art. L5262-5 (V)
+	  - Code des transports - art. L5262-6-2 (V)
 
 	**Codifié par**:
 
