--- a/01. PARTIE LEGISLATIVE/Article L5765-1 - 23078630.md
+++ b/01. PARTIE LEGISLATIVE/Article L5765-1 - 23078630.md
@@ -1,19 +1,23 @@
 # Article L5765-1
 
-Les dispositions des articles L. 5511-1 à L. 5511-5, L. 5521-1 à L. 5521-3, L. 5522-2, L. 5523-1 et L. 5523-2, L. 5524-1 à L.
+Les dispositions des articles L. 5511-1 à L. 5511-5, L. 5521-1 à L. 5521-3, L. 5522-2, L. 5523-1 à L. 5523-4, L. 5524-1 à L.
 5524-4 et L. 5531-1 à L. 5532-1 sont applicables en Nouvelle-Calédonie en tant qu'ils concernent les compétences exercées par
 l'Etat.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 14
+
 	**Cite**:
 
-	  - Code des transports - art. L5511-1 (V)
-	  - Code des transports - art. L5521-1 (V)
-	  - Code des transports - art. L5522-2 (V)
-	  - Code des transports - art. L5523-1 (V)
-	  - Code des transports - art. L5524-1 (V)
-	  - Code des transports - art. L5531-1 (V)
+	  - Code des transports - art. L5511-1
+	  - Code des transports - art. L5521-1
+	  - Code des transports - art. L5522-2
+	  - Code des transports - art. L5523-1
+	  - Code des transports - art. L5524-1
+	  - Code des transports - art. L5531-1
 
 	**Codifié par**:
 
