--- a/01. PARTIE LEGISLATIVE/Article L5775-1 - 23078598.md
+++ b/01. PARTIE LEGISLATIVE/Article L5775-1 - 23078598.md
@@ -1,7 +1,7 @@
 # Article L5775-1
 
 Les dispositions des articles L. 5511-1 à L. 5511-5, 
-L. 5521-1 à L. 5521-3, L. 5522-2, L. 5523-2, 
+L. 5521-1 à L. 5521-3, L. 5522-2, L. 5523-2, L. 5523-3 et L. 5523-4, 
 L. 5524-1 à L. 5524-4 et L. 5531-1 à L. 5532-1 sont applicables en Polynésie française, compte tenu, le cas échéant, de
 l'association de la Polynésie française à l'exercice des compétences de l'Etat en matière de police de la circulation
 maritime dans les eaux intérieures, prévue par l'article 34 de la loi organique n° 2004-192 du 27 février 2004.
@@ -10,14 +10,18 @@ maritime dans les eaux intérieures, prévue par l'article 34 de la loi organiqu
 
 	**Cite**:
 
-	  - Loi n°2004-192 du 27 février 2004 - art. 34 (V)
-	  - Code des transports - art. L5511-1 (V)
-	  - Code des transports - art. L5521-1 (V)
-	  - Code des transports - art. L5522-2 (V)
-	  - Code des transports - art. L5523-2 (V)
-	  - Code des transports - art. L5524-1 (V)
-	  - Code des transports - art. L5531-1 (V)
+	  - Loi organique n°2004-192 du 27 février 2004 - art. 34
+	  - Code des transports - art. L5511-1
+	  - Code des transports - art. L5521-1
+	  - Code des transports - art. L5522-2
+	  - Code des transports - art. L5523-2
+	  - Code des transports - art. L5524-1
+	  - Code des transports - art. L5531-1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 14
