--- a/01. PARTIE LEGISLATIVE/Article L5792-3 - 24150609.md
+++ b/01. PARTIE LEGISLATIVE/Article L5792-3 - 24150609.md
@@ -1,20 +1,20 @@
 # Article L5792-3
 
-Pour l'application des articles L. 5222-2 et L. 5243-2-2 aux Terres australes et antarctiques françaises, les mots : " et au
-3° de l'article L. 5336-5 " et les mots : " et les agents du 3° de l'article L. 5336-5 " sont remplacés par les mots : " et
-les agents chargés de la constatation des infractions à la police de la signalisation maritime ".
+Pour l'application de l'article L. 5243-2-2 aux Terres australes et antarctiques françaises, les mots : " et les agents du 3°
+de l'article L. 5336-5 " sont remplacés par les mots : " et les agents chargés de la constatation des infractions à la police
+de la signalisation maritime ".
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 14
+
 	**Cite**:
 
-	  - Code des transports - art. L5222-2
 	  - Code des transports - art. L5243-2-2
+	  - Code des transports - art. L5336-5
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Créé par**:
-
-	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 10
