--- a/01. PARTIE LEGISLATIVE/Article L5552-36 - 23079176.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-36 - 23079176.md
@@ -1,25 +1,43 @@
 # Article L5552-36
 
-Lorsque les enfants mineurs issus de plusieurs lits sont orphelins de père et de mère, la pension qui aurait été attribuée au
-conjoint survivant se partage, par parties égales, entre chaque groupe d'orphelins. 
+En cas de pluralité d'ayants cause du marin, la pension de réversion prévue à l'article L. 5552-25 est répartie entre les
+bénéficiaires des différents lits comme suit : 
 
-La pension temporaire est, dans ce cas, attribuée dans les conditions prévues aux articles L. 5552-31 à L. 5552-33 et L.
-5552-35.
+1° Les conjoints survivants ou divorcés ayant droit à la pension de réversion ont droit à une part de la pension de réversion
+correspondant au rapport entre leur nombre et le nombre total de lits en présence. Cette part est ensuite partagée entre eux
+au prorata de la durée respective de chaque mariage. Un lit est constitué soit par le conjoint survivant, soit par chaque
+conjoint divorcé survivant, soit par chaque fratrie d'orphelins du marin dont l'autre parent n'a pas ou plus droit à pension
+de réversion ; 
+
+2° La différence entre le montant global de la pension de réversion et la part de cette pension versée aux conjoints
+survivants ou divorcés en application du 1° est répartie également entre les orphelins ayant droit à cette pension mentionnés
+au même 1°.
+
+**Nota:**
+
+Loi n° 2012-1404 du 17 décembre 2012 de financement de la sécurité sociale pour 2013, article 80 II : Ces dispositions
+s'appliquentLe aux pensions de réversion liquidées  à compter du 1er janvier 2013. 
+
+Dans les cas où son application conduit à la révision et à la liquidation d'une pension inférieure à ce que percevait l'ayant
+cause du marin avant le 1er janvier 2013, cet ayant cause conserve le bénéfice de l'ancienne pension jusqu'à la notification
+du nouveau montant calculé en application de l'article L. 5552-36 du code des transports, dans sa rédaction issue de la
+présente loi. Le trop-perçu ne peut faire l'objet d'aucune demande de l'administration tendant à la répétition des sommes
+indûment versées.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L19 (Ab), alinéa 2
+	  - Loi n°2012-1404 du 17 décembre 2012 - art. 80 (V)
+
+	**Cite**:
+
+	  - Code des transports - art. L5552-25
 
 	**Cité par**:
 
 	  - Code des transports - art. L5552-31 (V)
 	  - Code des transports - art. L5552-44 (V)
-
-	**Cite**:
-
-	  - Code des transports - art. L5552-35 (V)
 
 	**Codifié par**:
 
