--- a/01. PARTIE LEGISLATIVE/Article L5552-37 - 23079174.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-37 - 23079174.md
@@ -1,22 +1,29 @@
 # Article L5552-37
 
-Lorsqu'au décès du marin il existe plusieurs conjoints ou ex-conjoints survivants, ayant droit à pension, la pension de
-réversion est répartie entre eux au prorata de la durée respective de chaque mariage. Au décès de l'un des bénéficiaires, le
-droit est reversé au profit des enfants que le bénéficiaire a eus avec le marin réunissant les conditions d'âge exigées pour
-l'octroi d'une pension ou, à défaut, sa part accroît la part des autres conjoints ou ex-conjoints survivants. 
+Lorsqu'au décès du marin il existe plusieurs conjoints ou anciens conjoints survivants ayant droit à l'allocation annuelle
+proportionnelle prévue à l'article L. 5552-29, cette allocation est répartie entre eux au prorata de la durée respective de
+chaque mariage.
 
-Les dispositions du premier alinéa s'appliquent dans les mêmes conditions à l'allocation annuelle mentionnée à l'article L.
-5552-29.
+**Nota:**
+
+Loi n° 2012-1404 du 17 décembre 2012 de financement de la sécurité sociale pour 2013, article 80 II : Ces dispositions
+s'appliquentLe aux pensions de réversion liquidées  à compter du 1er janvier 2013. 
+
+Dans les cas où son application conduit à la révision et à la liquidation d'une pension inférieure à ce que percevait l'ayant
+cause du marin avant le 1er janvier 2013, cet ayant cause conserve le bénéfice de l'ancienne pension jusqu'à la notification
+du nouveau montant calculé en application de l'article L. 5552-36 du code des transports, dans sa rédaction issue de la
+présente loi. Le trop-perçu ne peut faire l'objet d'aucune demande de l'administration tendant à la répétition des sommes
+indûment versées.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L20 (Ab), alinéas 3 à 5
+	  - Loi n°2012-1404 du 17 décembre 2012 - art. 80 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L5552-29 (V)
+	  - Code des transports - art. L5552-29
 
 	**Codifié par**:
 
