--- a/01. PARTIE LEGISLATIVE/Article L5552-44 - 23079151.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-44 - 23079151.md
@@ -1,10 +1,10 @@
 # Article L5552-44
 
-Sous réserve des dispositions des articles L. 5552-7, 
-L. 5552-10, L. 5552-31 et L. 5552-38, les pensions sont définitivement acquises et ne peuvent être révisées ou supprimées que
-dans les conditions suivantes : 
+Sous réserve des  dispositions des articles L. 5552-7, 
+L. 5552-10, L. 5552-31, L. 5552-36, L. 5552-37 et L. 5552-38, les pensions sont définitivement acquises et ne peuvent être
+révisées ou supprimées que dans les conditions suivantes : 
 
-1° A tout moment, en cas d'erreur matérielle ; 
+1° A tout moment, en cas d'erreur matérielle ;
 
 2° Dans le délai d'un an à compter de la notification de la décision de concession initiale de la pension, en cas d'erreur de
 droit. 
@@ -12,18 +12,30 @@ droit.
 La restitution des sommes payées au titre de la pension supprimée ou révisée est exigible lorsque l'intéressé était de
 mauvaise foi.
 
+**Nota:**
+
+Loi n° 2012-1404 du 17 décembre 2012 de financement de la sécurité sociale pour 2013, article 80 II : Ces dispositions
+s'appliquentLe aux pensions de réversion liquidées  à compter du 1er janvier 2013. 
+
+Dans les cas où son application conduit à la révision et à la liquidation d'une pension inférieure à ce que percevait l'ayant
+cause du marin avant le 1er janvier 2013, cet ayant cause conserve le bénéfice de l'ancienne pension jusqu'à la notification
+du nouveau montant calculé en application de l'article L. 5552-36 du code des transports, dans sa rédaction issue de la
+présente loi. Le trop-perçu ne peut faire l'objet d'aucune demande de l'administration tendant à la répétition des sommes
+indûment versées.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L37 (Ab)
+	  - Loi n°2012-1404 du 17 décembre 2012 - art. 80 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L5552-10 (V)
+	  - Code des transports - art. L5552-10
 	  - Code des transports - art. L5552-31 (V)
-	  - Code des transports - art. L5552-38 (V)
-	  - Code des transports - art. L5552-7 (V)
+	  - Code des transports - art. L5552-36 (V)
+	  - Code des transports - art. L5552-38
+	  - Code des transports - art. L5552-7
 
 	**Codifié par**:
 
