--- a/01. PARTIE LEGISLATIVE/Article L5553-3 - 23079139.md
+++ b/01. PARTIE LEGISLATIVE/Article L5553-3 - 23079139.md
@@ -1,14 +1,14 @@
 # Article L5553-3
 
 Les périodes de perception d'une indemnité journalière de sécurité sociale pour accident du travail ou maladie
-professionnelle, accident non professionnel, maladie, maternité ou congé de paternité donnent lieu, de la part des
-bénéficiaires, au versement de la cotisation personnelle assise sur le montant de cette indemnité.
+professionnelle, accident non professionnel, maladie, maternité ou congé de paternité et d'accueil de l'enfant donnent lieu,
+de la part des bénéficiaires, au versement de la cotisation personnelle assise sur le montant de cette indemnité.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L41 (Ab), alinéa 6
+	  - Loi n°2012-1404 du 17 décembre 2012 - art. 94
 
 	**Codifié par**:
 
