--- a/01. PARTIE LEGISLATIVE/Article L5552-31 - 23079189.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-31 - 23079189.md
@@ -1,19 +1,30 @@
 # Article L5552-31
 
-Chaque orphelin a droit à une pension temporaire égale à une fraction de la pension de réversion, sans toutefois que le
-conjoint survivant et les orphelins qu'ils soient ou non issus de plusieurs lits puissent recevoir au total plus que le
-montant de la pension attribuée ou qui aurait été attribuée au marin. S'il y a excédent, il est procédé à la réduction
-temporaire des pensions d'orphelins.
+Chaque orphelin a droit à une pension temporaire égale à une fraction définie par décret en Conseil d'Etat de la pension dont
+le marin était ou aurait été titulaire, sans toutefois que le conjoint survivant et les orphelins qu'ils soient ou non issus
+de plusieurs lits puissent recevoir au total plus que le montant de la pension attribuée ou qui aurait été attribuée au
+marin. S'il y a excédent, il est procédé à la réduction temporaire des pensions d'orphelins. 
 
-En cas de décès de l'autre parent ou si celui-ci ne peut prétendre à pension, les droits qui lui auraient appartenu passent
-aux enfants dans la limite du maximum fixé par le premier alinéa.
+En cas de décès de l'autre parent ou si celui-ci ne peut prétendre à pension de réversion, les droits qui lui auraient
+appartenu passent aux enfants dans les conditions fixées à l'article L. 5552-36 dans la limite du maximum fixé par le premier
+alinéa et de l'âge prévu à l'article L. 5552-33.
+
+**Nota:**
+
+Loi n° 2012-1404 du 17 décembre 2012 de financement de la sécurité sociale pour 2013, article 80 II : Ces dispositions
+s'appliquentLe aux pensions de réversion liquidées  à compter du 1er janvier 2013. 
+
+Dans les cas où son application conduit à la révision et à la liquidation d'une pension inférieure à ce que percevait l'ayant
+cause du marin avant le 1er janvier 2013, cet ayant cause conserve le bénéfice de l'ancienne pension jusqu'à la notification
+du nouveau montant calculé en application de l'article L. 5552-36 du code des transports, dans sa rédaction issue de la
+présente loi. Le trop-perçu ne peut faire l'objet d'aucune demande de l'administration tendant à la répétition des sommes
+indûment versées.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L18 (Ab), alinéas 2 et 3
-	  - Code des pensions de retraite des marins frança... - art. L18-1 (Ab), alinéa 3
+	  - Loi n°2012-1404 du 17 décembre 2012 - art. 80 (V)
 
 	**Cité par**:
 
@@ -22,6 +33,10 @@ aux enfants dans la limite du maximum fixé par le premier alinéa.
 	  - Code des transports - art. L5552-34 (Ab)
 	  - Code des transports - art. L5552-36 (V)
 	  - Code des transports - art. L5552-44 (V)
+
+	**Cite**:
+
+	  - Code des transports - art. L5552-33 (V)
 
 	**Codifié par**:
 
