--- a/01. PARTIE LEGISLATIVE/Article L4211-1 - 23083287.md
+++ b/01. PARTIE LEGISLATIVE/Article L4211-1 - 23083287.md
@@ -3,7 +3,14 @@
 Les règles de construction, gréement et entretien des bateaux destinées à assurer la sécurité des personnes et des biens se
 trouvant à bord et celle de la navigation sont fixées par voie réglementaire.
 
+Un arrêté du ministre chargé des voies navigables réglemente la navigation dans les eaux intérieures des bateaux
+traditionnels lorsque ceux-ci sont possédés par une association dont seuls les membres ont vocation à embarquer à leur bord.
+
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 5
 
 	**Cité par**:
 
