--- a/01. PARTIE LEGISLATIVE/Article L4272-1 - 23083171.md
+++ b/01. PARTIE LEGISLATIVE/Article L4272-1 - 23083171.md
@@ -1,14 +1,11 @@
 # Article L4272-1
 
-Sont chargés de constater les infractions définies par les chapitres III et IV et par les règlements concernant les bateaux,
-outre les officiers et agents de police judiciaire, les fonctionnaires et agents relevant du ministre chargé des transports,
-assermentés et commissionnés dans des conditions fixées par décret en Conseil d'Etat.
+Sont chargés de constater les infractions définies par les chapitres III et IV, par les règlements de police de la navigation
+intérieure et par les règlements concernant les bateaux, outre les officiers et agents de police judiciaire, les
+fonctionnaires et agents relevant du ministre chargé des transports, assermentés et commissionnés dans des conditions fixées
+par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°72-1202 du 23 décembre 1972 - art. 22 (Ab)
 
 	**Cité par**:
 
@@ -30,6 +27,10 @@ assermentés et commissionnés dans des conditions fixées par décret en Consei
 	  - Code des transports - art. R4241-42 (V)
 	  - Code des transports - art. R4272-1 (V)
 	  - Code des transports - art. R4272-2 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 3
 
 	**Codifié par**:
 
