--- a/01. PARTIE LEGISLATIVE/Article L4312-1 - 23083091.md
+++ b/01. PARTIE LEGISLATIVE/Article L4312-1 - 23083091.md
@@ -1,25 +1,34 @@
 # Article L4312-1
 
-Voies navigables de France est administré par un conseil d'administration, qui comprend :
+Voies navigables de France est administré par un conseil d'administration, qui comprend : 
 
-1° Des représentants de l'Etat ;
+1° Des représentants de l'Etat ; 
 
 2° Des personnalités qualifiées dans les domaines de la navigation intérieure, des transports, de l'énergie hydraulique, de
-la protection des milieux aquatiques et de l'aménagement du territoire ;
+la protection des milieux aquatiques et de l'aménagement du territoire ; 
 
-3° Des représentants du personnel de l'établissement.
+3° Des représentants du personnel de l'établissement. Sont électeurs au conseil d'administration toutes les catégories de
+personnel mentionnées à l'article L. 4312-3-1. L'élection a lieu par collège représentant respectivement, d'une part, les
+personnels mentionnés aux 1° à 3° du même article L. 4312-3-1 et, d'autre part, les personnels mentionnés au 4° dudit
+article, dans des conditions de nature à permettre la représentation de chaque collège fixées par décret en Conseil d'Etat.
+Le nombre de représentants du personnel au conseil d'administration tient compte des effectifs respectifs des agents de droit
+public et des salariés de droit privé de l'établissement.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi du 27 février 1912 - art. 67 (Ab), alinéa 4, ecqc RAP
 
 	**Cité par**:
 
 	  - Décret n°60-1441 du 26 décembre 1960 - art. 6 (V)
 	  - Décret n°2013-920 du 15 octobre 2013 - art. 1 (V)
 	  - Code des transports - art. R4312-1 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 1
+
+	**Cite**:
+
+	  - Code des transports - art. L4312-3-1
 
 	**Codifié par**:
 
