--- a/01. PARTIE LEGISLATIVE/Article L4312-3 - 23083085.md
+++ b/01. PARTIE LEGISLATIVE/Article L4312-3 - 23083085.md
@@ -1,19 +1,26 @@
 # Article L4312-3
 
 Le directeur général de Voies navigables de France est nommé par décret, sur le rapport du ministre chargé des transports,
-après avis du conseil d'administration.
+après avis du conseil d'administration. 
 
 Il met en œuvre la politique arrêtée par le conseil d'administration, assure l'exécution de ses délibérations et exerce les
-compétences que ce dernier lui délègue.
+compétences que ce dernier lui délègue. 
 
 Après accord du conseil d'administration, il peut confier aux agents et aux représentants locaux de l'établissement certaines
-de ses attributions propres et certaines des compétences que le conseil d'administrations lui a déléguées.
+de ses attributions propres et certaines des compétences que le conseil d'administrations lui a déléguées. 
+
+Le directeur général a autorité sur l'ensemble des personnels de l'établissement. 
+
+Il peut disposer d'une délégation de tout ou partie des pouvoirs du ministre chargé des transports en matière de gestion et
+de recrutement des personnels mentionnés aux 1° et 2° de l'article L. 4312-3-1, dans des conditions définies par décret en
+Conseil d'Etat. 
+
+Il recrute et gère les personnels mentionnés aux 3° et 4° du même article L. 4312-3-1. 
+
+Il peut déléguer ses pouvoirs en matière de gestion et de recrutement aux directeurs des services territoriaux de
+l'établissement.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°60-1441 du 26 décembre 1960 - art. 16 (V), 17 (V) et 18 (V), en partie
 
 	**Cité par**:
 
@@ -21,6 +28,14 @@ de ses attributions propres et certaines des compétences que le conseil d'admin
 	  - Décret n°60-1441 du 26 décembre 1960 - art. 17 (Ab)
 	  - Code des transports - art. R4312-16 (V)
 	  - Code des transports - art. R4312-17 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 2
+
+	**Cite**:
+
+	  - Code des transports - art. L4312-3-1
 
 	**Codifié par**:
 
