--- a/01. PARTIE LEGISLATIVE/Article L4312-4 - 23083081.md
+++ b/01. PARTIE LEGISLATIVE/Article L4312-4 - 23083081.md
@@ -5,6 +5,10 @@ de ses dispositions peuvent être modifiées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 2
+
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
