--- a/01. PARTIE LEGISLATIVE/Article L1214-14 - 23086107.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-14 - 23086107.md
@@ -4,23 +4,35 @@ Le plan de déplacements urbains est élaboré ou révisé à l'initiative de l'
 transports urbains sur le territoire qu'il couvre. 
 
 Les services de l'Etat, de même que les régions et les départements au titre de leur qualité d'autorités organisatrices de
-transport ou de gestionnaires d'un réseau routier et, le cas échéant, le président de l'établissement public mentionné à
-l'article L. 122-4 du code de l'urbanisme sont associés à son élaboration. 
+transport ou de gestionnaires d'un réseau routier et, le cas échéant, le président de l'établissement public mentionné aux
+articles L. 122-4 et L. 122-4-1 du code de l'urbanisme sont associés à son élaboration. 
 
 Les représentants des professions et des usagers des transports ainsi que des associations de personnes handicapées ou dont
 la mobilité est réduite, les chambres de commerce et d'industrie et les associations agréées de protection de l'environnement
 mentionnées à l'article L. 141-1 du code de l'environnement sont consultés, à leur demande, sur le projet.
 
+**Nota:**
+
+Ordonnance n° 2012-11 du 5 janvier 2012 article 19 : Les présentes dispositions entrent en vigueur à une date déterminée par
+décret en Conseil d'Etat et au plus tard le 1er janvier 2013. Toutefois, les dispositions en vigueur antérieurement à
+l'entrée en vigueur de l'ordonnance demeurent applicables :
+
+- aux procédures d'élaboration et de révision des schémas de cohérence territoriale et des plans locaux d'urbanisme
+prescrites à cette même date ;
+
+- aux procédures de modification des schémas de cohérence territoriale et des plans locaux d'urbanisme lorsque le projet de
+modification a été notifié aux personnes publiques associées à la date d'entrée en vigueur de l'ordonnance.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2 (M), alinéa 1
+	  - Ordonnance n°2012-11 du 5 janvier 2012 - art. 14
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4 (V)
-	  - Code de l'environnement - art. L141-1 (V)
+	  - Code de l'urbanisme - art. L122-4 (VT)
+	  - Code de l'environnement - art. L141-1
 
 	**Cité par**:
 
