--- a/01. PARTIE LEGISLATIVE/Article L4311-1 - 23083113.md
+++ b/01. PARTIE LEGISLATIVE/Article L4311-1 - 23083113.md
@@ -1,24 +1,23 @@
 # Article L4311-1
 
-L'établissement public de l'Etat à caractère industriel et commercial dénommé Voies navigables de France est chargé de
-l'exploitation, de l'entretien, de l'amélioration, de l'extension et de la promotion des voies navigables et de leurs
-dépendances, ainsi que de l'étude de toute question relative à la navigation intérieure et à l'utilisation des cours d'eau et
-plans d'eau. 
+L'établissement public de l'Etat à caractère administratif dénommé " Voies navigables de France " : 
 
-Pour l'accomplissement de ses missions, il gère et exploite, en régie directe ou par l'intermédiaire de sociétés filiales, le
-domaine de l'Etat qui lui est confié en vertu de l'article L. 4314-1, ainsi que son domaine privé. 
+1° Assure l'exploitation, l'entretien, la maintenance, l'amélioration, l'extension et la promotion des voies navigables ainsi
+que de leurs dépendances en développant un transport fluvial complémentaire des autres modes de transport, contribuant ainsi
+au report modal par le réseau principal et par le réseau secondaire ; 
 
-Il apporte un appui technique aux autorités administratives de l'Etat en charge de la navigation intérieure et peut proposer
-toute réglementation concernant l'exploitation du domaine public fluvial, les activités ou professions qui s'y rattachent et
-la police de la navigation intérieure.
+2° Est chargé de la gestion hydraulique des voies qui lui sont confiées en conciliant les usages diversifiés de la ressource
+aquatique, ainsi qu'en assurant l'entretien et la surveillance des ouvrages et aménagements hydrauliques situés sur le
+domaine qui lui est confié ; 
+
+3° Concourt au développement durable et à l'aménagement du territoire, notamment par la sauvegarde des zones humides et des
+aménagements nécessaires à la reconstitution de la continuité écologique, la prévention des inondations, la conservation du
+patrimoine et la promotion du tourisme fluvial et des activités nautiques ; 
+
+4° Gère et exploite, en régie directe ou par l'intermédiaire de personnes morales de droit public ou de sociétés qu'il
+contrôle, le domaine de l'Etat qui lui est confié en vertu de l'article L. 4314-1 ainsi que son domaine privé.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi du 27 février 1912 - art. 67 (Ab), alinéas 1 à 4, sauf ecqc RAP
-	  - Loi n°90-1168 du 29 décembre 1990 - art. 124 (Ab), alinéas 1 et 2
-	  - Loi n°91-1385 du 31 décembre 1991 - art. 1 (VT), alinéa 1, paragraphe I
 
 	**Cité par**:
 
@@ -27,9 +26,13 @@ la police de la navigation intérieure.
 	  - Code des transports - art. R4311-1 (V)
 	  - Code des transports - art. R4313-14 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 1
+
 	**Cite**:
 
-	  - Code des transports - art. L4314-1 (V)
+	  - Code des transports - art. L4314-1
 
 	**Codifié par**:
 
