--- a/01. PARTIE LEGISLATIVE/Article L4313-3 - 23083066.md
+++ b/01. PARTIE LEGISLATIVE/Article L4313-3 - 23083066.md
@@ -1,18 +1,18 @@
 # Article L4313-3
 
-Dans le cas où des atteintes à l'intégrité et à la conservation du domaine confié à Voies navigables de France ont été
-constatées, le président de Voies navigables de France saisit le tribunal administratif territorialement compétent, en lieu
-et place du préfet, dans les conditions et suivant les procédures prévues par le chapitre IV du titre VII du livre VII du
-code de justice administrative.
+Dans le cas où des atteintes à l'intégrité et à la conservation du domaine défini par le chapitre IV du présent titre ont été
+constatées, le directeur général de Voies navigables de France saisit la juridiction territorialement compétente, en lieu et
+place du préfet, dans les conditions et suivant les procédures prévues par le chapitre IV du titre VII du livre VII du code
+de justice administrative. 
 
-Le président de Voies navigables de France peut déléguer sa signature au directeur général. Le directeur général peut
-subdéléguer sa signature aux chefs des services déconcentrés de l'Etat qui sont les représentants locaux de l'établissement.
+Il peut déléguer sa signature aux directeurs des services territoriaux de l'établissement. Ces derniers peuvent subdéléguer
+leur signature aux agents de l'établissement chargés de fonctions d'encadrement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°91-1385 du 31 décembre 1991 - art. 1 (VT), alinéa 5, ecqc VNF paragraphe IV, alinéa 6, paragraphe VI
+	  - Loi n°2012-77 du 24 janvier 2012 - art. 3
 
 	**Cité par**:
 
