--- a/01. PARTIE LEGISLATIVE/Article L6527-10 - 23077580.md
+++ b/01. PARTIE LEGISLATIVE/Article L6527-10 - 23077580.md
@@ -9,7 +9,14 @@ un an, à dater de leur exigibilité :
 
 1° Par un privilège mobilier prenant rang concurremment avec celui établi par le 4° de l'article 2331 du code civil ; 
 
-2° Par une hypothèque légale prenant rang du jour de son inscription au bureau des hypothèques.
+2° Par une hypothèque légale prenant rang du jour de son inscription au fichier immobilier (1).
+
+**Nota:**
+
+(1) L'ordonnance n° 2010-638, article 13, a modifié l'article L. 426-5 du code de l'aviation civile en remplaçant les mots
+"au bureau des hypothèques" par les mots "au fichier immobilier". Cette mise à jour sera reportée au 1er janvier 2013 (entrée
+en vigueur différée) à l'article L. 6527-10 du code des transports qui a remplacé l'article L. 426-5 du code de l'aviation
+civile.
 
 **Liens relatifs à cet article**
 
@@ -17,10 +24,6 @@ un an, à dater de leur exigibilité :
 
 	  - Code civil - art. 2331
 	  - Code des transports - art. L6527-2 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L426-5 (VT), alinéas 1, 4, 5 et 6, ecqc la garantie de paiement de cotisations versées
 
 	**Cité par**:
 
