--- a/01. PARTIE LEGISLATIVE/Article L5753-2 - 23078684.md
+++ b/01. PARTIE LEGISLATIVE/Article L5753-2 - 23078684.md
@@ -1,16 +1,21 @@
 # Article L5753-2
 
-Les dispositions des articles L. 5314-3, L. 5343-1 à L. 5343-23 et L. 5344-1 à L. 5344-4, L. 5351-4 ne sont pas applicables à
-Saint-Pierre-et-Miquelon.
+Les dispositions des articles L. 5314-3, L. 5334-6-1 à L. 5334-6-3, L. 5343-1 à L. 5343-23 et L. 5344-1 à L. 5344-4, L.
+5351-4 ne sont pas applicables à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2013-139 du 13 février 2013 - art. 1
+
 	**Cite**:
 
-	  - Code des transports - art. L5314-3 (V)
-	  - Code des transports - art. L5343-1 (V)
-	  - Code des transports - art. L5344-1 (V)
-	  - Code des transports - art. L5351-4 (V)
+	  - Code des transports - art. L5314-3
+	  - Code des transports - art. L5334-6-1
+	  - Code des transports - art. L5343-1
+	  - Code des transports - art. L5344-1
+	  - Code des transports - art. L5351-4
 
 	**Codifié par**:
 
