--- a/01. PARTIE LEGISLATIVE/Article L5334-6 - 27067023.md
+++ b/01. PARTIE LEGISLATIVE/Article L5334-6 - 27067023.md
@@ -7,10 +7,10 @@ et aux caractéristiques des cargaisons, notamment dangereuses ou polluantes.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. L153-1 (Ab)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Liens**:
+
+	  - DEPLACE: Ordonnance n°2013-139 du 13 février 2013 - art. 1
